// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders SidebarItem components 1`] = `
<div
  className="sidebar-wrapper"
>
  <ul
    className="nav"
  >
    <li
      className="nav-item"
    />
  </ul>
</div>
`;

exports[`renders correctly with the default props 1`] = `
<div
  className="sidebar-wrapper"
>
  <ul
    className="nav"
  />
</div>
`;

exports[`renders only SidebarItem components 1`] = `
<div
  className="sidebar-wrapper"
>
  <ul
    className="nav"
  />
</div>
`;
